--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <h1>Hello Branch Model Test</h1>
-Branch model test v0.5.0
+<p>Version: <span id="version">VERSION</span></p>
+<script>
+    fetch('./package.json')
+        .then(response => response.json())
+        .then(data => {
+            document.getElementById('version').textContent = data.version;
+        })
+        .catch(error => {
+            console.error('Error fetching version:', error);
+            document.getElementById('version').textContent = 'ERROR';
+        });
+</script>
