--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Hello Branch Model Test</h1>
+<h1>Branch Model Test</h1>
 <p>Version: <span id="version">VERSION</span></p>
 <script>
     fetch('./package.json')
