--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         })
         .catch(error => {
             console.error('Error fetching version:', error);
-            document.getElementById('version').textContent = 'ERROR';
+            document.getElementById('version').textContent = 'Could not load version from package.json';
         });
 </script>
